Fill out skeleton html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
 <body>
   <div class="wrapper">
     <div class="row">
-      <div class="column">1</div>
-      <div class="column">2</div>
+      <div class="column">
+        <div class="logo">Odin</div>
+      </div>
+      <div class="column">
+        <div class="form-info">Please sign up to our imaginary service</div>
+        <form action="#" method="post">
+          
+        </form>
+        <button>Create Account</button>
+        <div class="login">Already have an account? Log in</div>
+      </div>
     </div>
   </div>
-  <div>Placeholder Title</div>
 </body>
 </html>
