--- a/index.html
+++ b/index.html
@@ -15,7 +15,23 @@
       <div class="column">
         <div class="form-info">Please sign up to our imaginary service</div>
         <form action="#" method="post">
-          
+          <label for="first_name">First Name</label>
+          <input type="text" id="first_name" name="first_name">
+
+          <label for="last_name">Last Name</label>
+          <input type="text" id="last_name" name="last_name">
+
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email">
+
+          <label for="phone_number">Phone Number</label>
+          <input type="tel" id="phone_number" name="phone_number">
+
+          <label for="password">Password</label>
+          <input type="text" id,="password" name="password">
+
+          <label for="confirm_password">Confirm password</label>
+          <input type="text" id,="confirm_password" name="confirm_password">
         </form>
         <button>Create Account</button>
         <div class="login">Already have an account? Log in</div>
