--- a/index.html
+++ b/index.html
@@ -9,30 +9,53 @@
 <body>
   <div class="wrapper">
     <div class="row">
-      <div class="column">
+      <div class="left column">
         <div class="logo">Odin</div>
+        <div>
+          Photo by Halie West on Unsplash
+        </div>
       </div>
-      <div class="column">
+      <div class="right column">
         <div class="form-info">Please sign up to our imaginary service</div>
         <form action="#" method="post">
-          <label for="first_name">First Name</label>
-          <input type="text" id="first_name" name="first_name">
+          
+          <div class="form-row">
+            <div class="form-item">
+              <label for="first_name">First Name</label>
+              <input type="text" id="first_name" name="first_name">
+            </div>
 
-          <label for="last_name">Last Name</label>
-          <input type="text" id="last_name" name="last_name">
+            <div class="form-item">
+              <label for="last_name">Last Name</label>
+              <input type="text" id="last_name" name="last_name">
+            </div>
+          </div>
 
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email">
+          <div class="form-row">
+            <div class="form-item">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email">
+            </div>
 
-          <label for="phone_number">Phone Number</label>
-          <input type="tel" id="phone_number" name="phone_number">
+            <div class="form-item">
+              <label for="phone_number">Phone Number</label>
+              <input type="tel" id="phone_number" name="phone_number">
+            </div>
+          </div>
 
-          <label for="password">Password</label>
-          <input type="text" id,="password" name="password">
-
-          <label for="confirm_password">Confirm password</label>
-          <input type="text" id,="confirm_password" name="confirm_password">
+          <div class="form-row">
+            <div class="form-item">
+              <label for="password">Password</label>
+              <input type="text" id,="password" name="password">
+            </div>
+            
+            <div class="form-item">
+              <label for="confirm_password">Confirm password</label>
+              <input type="text" id,="confirm_password" name="confirm_password">
+            </div>
+          </div>
         </form>
+
         <button>Create Account</button>
         <div class="login">Already have an account? Log in</div>
       </div>
