--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
         </form>
 
-        <button>Create Account</button>
+        <div><button>Create Account</button></div>
         <div class="login">Already have an account? Log in</div>
       </div>
     </div>
