Add margin to top and bottom of right col elements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div class="right column">
-        <div class="form-info">Please sign up to our imaginary service</div>
+        <div class="form-info">Please sign up to our imaginary service here</div>
         <form action="#" method="post">
           
           <div class="form-row">
@@ -57,7 +57,7 @@
         </form>
 
         <div><button>Create Account</button></div>
-        <div class="login">Already have an account? Log in</div>
+        <div class="login">Already have an account? <strong>Log in</strong></div>
       </div>
     </div>
   </div>
