Add line art logo and styling to title element

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <div class="wrapper">
     <div class="row">
       <div class="left column">
-        <div class="logo">Odin</div>
+        <div class="title-wrapper">
+          <img class="logo" src="assets/odin-lined.png" alt="The Odin Project logo, in line art style">
+          <div class="title-text">Odin</div>
+        </div>
         <div>
           Photo by Halie West on Unsplash
         </div>
