Resize background img correctly

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <img class="logo" src="assets/odin-lined.png" alt="The Odin Project logo, in line art style">
           <div class="title-text">Odin</div>
         </div>
-        <div>
+        <div class="credit">
           Photo by Halie West on Unsplash
         </div>
       </div>
