--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
           <div class="form-row">
             <div class="form-item">
               <label for="password">Password</label>
-              <input type="text" id,="password" name="password">
+              <input type="password" id,="password" name="password">
             </div>
             
             <div class="form-item">
               <label for="confirm_password">Confirm password</label>
-              <input type="text" id,="confirm_password" name="confirm_password">
+              <input type="password" id,="confirm_password" name="confirm_password">
             </div>
           </div>
         </form>
