--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
           <div class="form-row">
             <div class="form-item">
               <label for="first_name">First Name</label>
-              <input type="text" id="first_name" name="first_name">
+              <input type="text" id="first_name" name="first_name" placeholder="William">
             </div>
 
             <div class="form-item">
               <label for="last_name">Last Name</label>
-              <input type="text" id="last_name" name="last_name">
+              <input type="text" id="last_name" name="last_name" placeholder="Shakespeare">
             </div>
           </div>
 
           <div class="form-row">
             <div class="form-item">
               <label for="email">Email</label>
-              <input type="email" id="email" name="email">
+              <input type="email" id="email" name="email" placeholder="odin@thor.com">
             </div>
 
             <div class="form-item">
               <label for="phone_number">Phone Number</label>
-              <input type="tel" id="phone_number" name="phone_number">
+              <input type="tel" id="phone_number" name="phone_number" placeholder="07123456789">
             </div>
           </div>
 
