--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles.css" />
+  <script src="script.js" defer></script>
   <title>Sign-up form</title>
 </head>
 <body>
@@ -58,7 +59,7 @@
             
             <div class="form-item">
               <label for="confirm_password">Confirm password (*)</label>
-              <input type="password" id,="confirm_password" name="confirm_password"
+              <input type="password" id="confirm_password" name="confirm_password"
               required>
             </div>
           </div>
