Add CSS to Log In placeholder link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
             Create Account</button>
         </div>
 
-        <div class="login">Already have an account? <strong>Log in</strong></div>
+        <div class="login">
+          Already have an account? <a href="#"><strong>Log in</strong></a>
+        </div>
       </div>
     </div>
   </div>
